3.npm-migration: stopped here with systemjs

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="fragment" content="!" />
     <base href="./">
-    <script src="jspm_packages/system.src.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script>System.packageWithIndex = true;</script>
-    <script src="config.js"></script>
-    <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.7.0/css/font-awesome.min.css" type="text/css" media="all" />
+    <script src="system.config.js"></script>
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" type="text/css" media="all" />
     <link rel="stylesheet" href="app/style.css" type="text/css" media="all" />
   </head>
 
